--- a/assignment_3/styles.css
+++ b/assignment_3/styles.css
@@ -29,15 +29,19 @@ div
 
 /* FIRST ROW : FLOATS; */
 .a1 {
+	float: right; 
 }
 
 .b1 {
+	float: left
 }
 
 .c1 {
+	float: right;
 }
 
 .d1 {
+	float: left;
 }
 
 /* SECOND ROW : DISPLAY */
@@ -46,12 +50,15 @@ div
 }
 
 .b2 {
+	display: none;
 }
 
 .c2 {
+	display: inline;
 }
 
 .d2 {
+	display: block;
 }
 
 /* THIRD ROW : POSITION */
@@ -60,10 +67,19 @@ div
 }
 
 .b3 {
+	position: relative;
+	left: 30px;
+	bottom: 50px;
 }
 
 .c3 {
+	position: fixed;
+	right: 0;
+	bottom: 370px;
 }
 
 .d3 {
+	position: absolute;
+	left: 400px;
+	top:300px;
 }
